# libqcolorcombo

./: .travis.yml  CMakeLists.txt  ExampleWindow.cc  ExampleWindow.h  LICENSE  QColorCombo  QColorCombo-de_DE.ts  QColorCombo-en_US.ts  QColorCombo.cc  QColorCombo.h  QColorCombo.ts  QColorComboDesignerFactory.cc  QColorComboDesignerFactory.h  QColorComboPlugin-de_DE.ts  QColorComboPlugin-en_US.ts  QColorComboPlugin.ts  README  README.md  example.cc  nullptr.h  qcolorcombo.cc  qcolorcombo.h  qcolorcombo.ts
QColorCombo4/: CMakeLists.txt
QColorCombo5/: CMakeLists.txt
cmake/: CheckCXX11Features.cmake  c++11-test-unique_ptr.cpp
include/: ExampleWindow.h  QColorCombo.h  QColorComboDesignerFactory.h
src/: QColorCombo.cc  QColorComboDesignerFactory.cc  example.cc
