find_package(Qt4 COMPONENTS QtCore QtGui)
if(Qt4_FOUND AND QColorCombo_ENABLE_QT4)
    if(WIN32)
        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(QColorCombo_LIBRARY QBrowseButton4d)
        else(CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(QColorCombo_LIBRARY QBrowseButton4)
        endif(CMAKE_BUILD_TYPE_STREQUAL "Debug")
    else(WIN32)
        set(QColorCombo_LIBRARY QBrowseButton4)
    endif(WIN32)
    add_library(${QColorCombo_LIBRARY} ${LIB_TYPE} ../src/QColorCombo.cc ../include/QColorCombo.h)
    target_link_libraries(${QColorCombo_LIBRARY} Qt4::QtGui Qt4::QtCore)
    if(UNIX AND QColorCombo_BUILD_SHARED_LIBS)
        set_target_properties(${QColorCombo_LIBRARY} PROPERTIES SONAME "QColorCombo4"
                                                       VERSION ${QColorCombo_VERSION_MAJOR}.${QColorCombo_VERSION_MINOR}
                                                       SOVERSION ${QColorCombo_VERSION_MAJOR})
    endif(UNIX AND QColorCombo_BUILD_SHARED_LIBS)
    generate_export_header(${QColorCombo_LIBRARY} BASE_NAME QColorCombo
                                                    EXPORT_MACRO_NAME QColorCombo_EXPORT
                                                    EXPORT_FILE_NAME QColorCombo4_Export.h
                                                    STATIC_DEFINE QColorCombo_BUILT_AS_STATIC)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/QColorCombo4_Export.h DESTINATION include)
    install(TARGETS ${QColorCombo_LIBRARY} ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)

    if(QColorCombo_WITH_EXAMPLE)
        add_executable(${QColorCombo_LIBRARY}-test ../src/example.cc ../src/ExampleWindow.cc ../include/ExampleWindow.h)
        target_link_libraries(${QColorCombo_LIBRARY}-test ${QColorCombo_LIBRARY} Qt4::QtCore Qt4::QtGui)
        install(TARGETS ${QColorCombo_LIBRARY}-test RUNTIME DESTINATION bin)
    endif(QColorCombo_WITH_EXAMPLE)

    if(QColorCombo_WITH_DESIGNER_PLUGIN)
        add_definitions(-DQT_PLUGIN -DQT_SHARED)
        if(WIN32)
            add_definitions(-DQT_DLL)
        endif(WIN32)
        add_library(${QColorCombo_LIBRARY}Plugin SHARED ../src/QColorComboDesignerFactory.cc ../include/QColorComboDesignerFactory.h)
        target_link_libraries(${QColorCombo_LIBRARY}Plugin ${QColorCombo_LIBRARY} Qt4::QtGui Qt4::QtCore)
        install(TARGETS ${QColorCombo_LIBRARY}Plugin ARCHIVE DESTINATION lib/qt4/plugins/designer LIBRARY DESTINATION lib/qt4/plugins/designer RUNTIME DESTINATION lib/qt4/plugins/designer)
    endif(QColorCombo_WITH_DESIGNER_PLUGIN)
endif(Qt4_FOUND AND QColorCombo_ENABLE_QT4)
